...
      ratio: 4.83,
      viewBox: '0 0 214 44.3',
    },
  },
  {
    id: 'carrefour',
    name: 'Carrefour',
    aliases: ['Carrefour Belgium', 'Carte Carrefour / Mon Club Carrefour', 'Carte Carrefour'],
    markets: ['FR', 'BE', 'ES'],
    popularity: 1,
    wallets: 4,
    color: '#005BA7',
    logo: {
...
      ratio: 4.97,
      viewBox: '0 0 810.14 162.98',
    },
  },
  {
    id: 'starbucks',
    name: 'Starbucks',
    aliases: ['Starbucks Rewards'],
    markets: ['INT', 'FR', 'US', 'GB', 'BE', 'LU', 'CH', 'DE', 'AT', 'IE', 'ES', 'PT'],
    popularity: 2,
    wallets: 3,
    color: '#00643C',
    logo: {
...
